# BouncingBall

./: Animation_Game.md  Animation_State.md  BouncingBall.cabal  README.md  log.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: bouncing-ball-0.1.0.0-inplace.conf  package.cache
src/: Main.hs  Main.md
src/Animation/: Animation_Draw.md  Animation_Environment.md  Animation_Init.md  Animation_Input.md  Draw.hs  Environment.hs  Init.hs  Input.hs  State.hs
test/: AllTests.hs  TestDraw.hs  TestDraw.md  TestEnvironment.hs  TestEnvironment.md  TestGame.hs  TestGame.md  TestInit.hs  TestInit.md  TestInput.hs  TestInput.md  TestState.hs  TestState.md
