cabal-version:       2.4
name:                bouncing-ball
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:
      Animation.Environment
    , Animation.Input
    , Animation.State
    , Animation.Init
    , Animation.Draw
    , Animation.Game
  build-depends:
      base           >=4.12 && <4.15
    , gloss
    , mtl
    , transformers
    , random
    , directory
    , time
    , text
    , random  
    , directory   
  default-language:    Haskell2010

executable bouncing-ball
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Animation.Environment
    , Animation.Input
    , Animation.State
    , Animation.Init
    , Animation.Draw
    , Animation.Game
  build-depends:
      base         >=4.12 && <4.15
    , gloss
    , mtl
    , transformers
    , random    
    , directory    
    , time
    , text
  default-language:    Haskell2010
