cabal-version:       2.4
name:                bouncing-ball
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src, test
  exposed-modules:
      Animation.Environment
    , Animation.Input
    , Animation.State
    , Animation.Init
    , Animation.Draw
    , Animation.Game
    , TestDraw
    , TestEnvironment
    , TestGame
    , TestInit
    , TestInput
    , TestState
  build-depends:
      base           >=4.12 && <4.15
    , QuickCheck      >=2.14
    , gloss
    , mtl
    , transformers
    , random
    , directory
    , time
    , text
  default-language:    Haskell2010

executable bouncing-ball
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
      Animation.Environment
    , Animation.Input
    , Animation.State
    , Animation.Init
    , Animation.Draw
    , Animation.Game
  build-depends:
      base         >=4.12 && <4.15
    , gloss
    , mtl
    , transformers
    , random
    , directory
    , time
    , text
  default-language:    Haskell2010

test-suite all-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             AllTests.hs
  other-modules:
      Animation.Draw
    , Animation.Environment
    , Animation.Game
    , Animation.Init
    , Animation.Input
    , Animation.State
    , TestDraw
    , TestEnvironment
    , TestGame
    , TestInit
    , TestInput
    , TestState
  build-depends:
      base
    , QuickCheck
    , gloss
    , mtl
    , bouncing-ball
    , directory
    , random
    , time
  default-language:    Haskell2010
